# Aman_Singh_DS_SmartStockTracker

./: .replit  README.md  Untitled-1.ipynb  app.py  inventory.db  main.py  pyproject.toml  render.yaml  requirements.txt
